LaserDemo/TEXT/config.h

typedef struct  
{
	unsigned short type;
	unsigned short index;
	unsigned short id;
} TWatchVar;
typedef struct  
{
	unsigned long loop;
	TWatchVar var;
	unsigned short condition;
	double value;
} TEvent;
GT_API GT_ClearEvent(short cardNum);
GT_API GT_ClearTask(short cardNum);
GT_API GT_ClearEventTaskLink(short cardNum);
GT_API GT_AddEvent(short cardNum,TEvent *pEvent,short *pEventIndex);
GT_API GT_AddTask(short cardNum,short taskType,void *pTaskData,short *pTaskIndex);
GT_API GT_AddEventTaskLink(short cardNum,short eventIndex,short taskIndex,short *pLinkIndex);
GT_API GT_GetEventCount(short cardNum,short *pCount);
GT_API GT_GetEvent(short cardNum,short eventIndex,TEvent *pEvent);
GT_API GT_GetEventLoop(short cardNum,short eventIndex,unsigned long *pCount);
GT_API GT_GetTaskCount(short cardNum,short *pCount);
GT_API GT_GetTask(short cardNum,short taskIndex,short *pTaskType,void *pTaskData);
GT_API GT_GetEventTaskLinkCount(short cardNum,short *pCount);
GT_API GT_GetEventTaskLink(short cardNum,short linkIndex,short *pEventIndex,short *pTaskIndex);
GT_API GT_EventOn(short cardNum,short eventIndex,short count);
GT_API GT_EventOff(short cardNum,short eventIndex,short count);
GT_API GT_BufEventOn(short cardNum,short crd,short eventIndex,short count,short fifo);
GT_API GT_BufEventOff(short cardNum,short crd,short eventIndex,short count,short fifo);
#define VAR_CALCULATE_NONE					(0)
#define VAR_CALCULATE_OR					(1)
#define VAR_CALCULATE_AND					(3)
#define VAR_CALCULATE_NOT					(5)
#define VAR_CALCULATE_ADD					(11)
#define VAR_CALCULATE_SUB					(12)
#define VAR_CALCULATE_MUL					(13)
#define VAR_CALCULATE_DIV					(14)
typedef struct  
{
	TWatchVar var;
	unsigned short condition;
	double value;
} TWatchCondition;
typedef struct  
{
	unsigned short operation;
	unsigned short varType;
	unsigned short result;
	unsigned short lhs;
	unsigned short rhs;
} TVarCalculate;
GT_API GT_ClearVar(short cardNum);
GT_API GT_SetVarBoolCondition(short cardNum,short varIndex,TWatchCondition *pWatchCondition);
GT_API GT_GetVarBoolCondition(short cardNum,short varIndex,TWatchCondition *pWatchCondition);
GT_API GT_AddVarCalculate(short cardNum,TVarCalculate *pVarCalculate,short *pIndex);
GT_API GT_GetVarCalculateCount(short cardNum,short *pCount);
GT_API GT_GetVarCalculate(short cardNum,short index,TVarCalculate *pVarCalculate);