GTN_Crd_Domo_CSharp/GTN_Crd_Domo_CSharp/config.cs

			
			public struct TEvent 
			{
                public long loop;
                public TWatchVar var;
                public ushort condition;
                public double value;
			}
			[DllImport("gts.dll")]
			public static extern short GT_ClearEvent();
			[DllImport("gts.dll")]
			public static extern short GT_ClearTask();
			[DllImport("gts.dll")]
			public static extern short GT_ClearEventTaskLink();   
			[DllImport("gts.dll")]
			public static extern short GT_AddEvent(ref TEvent pEvent,ref short pEventIndex);  
			[DllImport("gts.dll")]
			public static extern short GT_AddTask(short taskType,System.IntPtr pTaskData,ref short pTaskIndex);
			[DllImport("gts.dll")]
			public static extern short GT_AddEventTaskLink(short eventIndex,short taskIndex,ref short pLinkIndex);
			[DllImport("gts.dll")]
			public static extern short GT_GetEventCount(out short pCount);
			[DllImport("gts.dll")]
			public static extern short GT_GetEvent(short eventIndex,out TEvent pEvent);
			[DllImport("gts.dll")]
			public static extern short GT_GetEventLoop(short eventIndex,out long pCount); 
			[DllImport("gts.dll")]
			public static extern short GT_GetTaskCount(out short pCount);
			[DllImport("gts.dll")]
			public static extern short GT_GetTask(short taskIndex,out short pTaskType,System.IntPtr pTaskData); 
			[DllImport("gts.dll")]
			public static extern short GT_GetEventTaskLinkCount(out short pCount);
			[DllImport("gts.dll")]
			public static extern short GT_GetEventTaskLink(short linkIndex,out short pEventIndex,out short pTaskIndex); 
			[DllImport("gts.dll")]
			public static extern short GT_EventOn(short eventIndex,short count); 
			[DllImport("gts.dll")]
			public static extern short GT_EventOff(short eventIndex,short count); 
			[DllImport("gts.dll")]
			public static extern short GT_BufEventOn(short crd,short eventIndex,short count,short fifo); 
			[DllImport("gts.dll")]
			public static extern short GT_BufEventOff(short crd,short eventIndex,short count,short fifo); 
			
			public const long VAR_CALCULATE_NONE = 0;
			public const long VAR_CALCULATE_OR = 1;
			public const long VAR_CALCULATE_AND = 3;
			public const long VAR_CALCULATE_NOT = 5;
			
			public const long VAR_CALCULATE_ADD = 11;
			public const long VAR_CALCULATE_SUB = 12;
			public const long VAR_CALCULATE_MUL = 13;
			public const long VAR_CALCULATE_DIV = 14;

			public struct TWatchCondition 
			{
                public TWatchVar var;
                public ushort condition;
                public double value;
			}
			
			public struct TVarCalculate 
			{
                public ushort operation;
                public ushort varType;
                public ushort result;
                public ushort lhs;
                public ushort rhs;
			}
			
			[DllImport("gts.dll")]
			public static extern short GT_ClearVar();
			[DllImport("gts.dll")]
			public static extern short GT_SetVarBoolCondition(short varIndex,ref TWatchCondition pWatchCondition); 
			[DllImport("gts.dll")]
			public static extern short GT_GetVarBoolCondition(short varIndex,out TWatchCondition pWatchCondition); 
			[DllImport("gts.dll")]
			public static extern short GT_AddVarCalculate(ref TVarCalculate pVarCalculate,ref short pIndex); 
			[DllImport("gts.dll")]
			public static extern short GT_GetVarCalculateCount(out short pCount); 
			[DllImport("gts.dll")]
			public static extern short GT_GetVarCalculate(short index,out TVarCalculate pVarCalculate); 
	}
}